--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-uuid": "^1.0.2",
+    "socket.io-client": "^4.5.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
